syntax = "proto3";
package proto;
option go_package = "./";

service MasterService {
  rpc RegisterChunkServer (RegisterChunkServerRequest) returns (RegisterChunkServerResponse);
   rpc DeleteChunk(DeleteChunkRequest) returns (DeleteChunkResponse);
}

message RegisterChunkServerRequest {
  string server_id = 1;
  string address = 2;
}

message RegisterChunkServerResponse {
  bool success = 1;
  string message = 2;
}

message DeleteChunkRequest {
  string chunk_id = 1;
}

message DeleteChunkResponse {
  bool success = 1;
  string message = 2;
}

